--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ included-patches = "'SIM spoof'"
 arch = "both"
 enabled = false
 
-[Reddit-Extended]
+[Reddit]
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
 cli-source = "inotia00/revanced-cli"
