--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ enable-magisk-update = false   # set this to false if you do not want to receive
 [Tiktok]
 version = "auto"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
-included-patches = "'SIM spoof'"
+excluded-patches = "'Playback speed' 'Downloads' 'Sanitize sharing links' 'Feed filter'"
 arch = "both"
 enabled = false
 
