--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ enable-magisk-update = false   # set this to false if you do not want to receive
 # you can use rvmm-config-gen to generate a config
 
 [Tiktok]
-version = "auto"
+version = "beta"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 excluded-patches = "'Playback speed' 'Downloads' 'Sanitize sharing links' 'Feed filter'"
 arch = "both"
