--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ enable-magisk-update = false   # set this to false if you do not want to receive
 [Tiktok]
 version = "beta"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
-excluded-patches = "'Playback speed' 'Downloads' 'Sanitize sharing links' 'Feed filter'"
+excluded-patches = "'Playback speed' 'Downloads' 'Sanitize sharing links' 'Feed filter' 'Settings'"
 arch = "both"
 
 [Reddit]
