--- a/config.toml
+++ b/config.toml
@@ -6,9 +6,11 @@ enable-magisk-update = false   # set this to false if you do not want to receive
 # you can use rvmm-config-gen to generate a config
 
 [Tiktok]
-version = "beta"
+version = "latest"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 excluded-patches = "'Playback speed' 'Downloads' 'Sanitize sharing links' 'Feed filter' 'Settings'"
+include-patches = "'SIM Spoof'"
+patch-args = "com.zhiliaoapp.musically:SIM spoof:mcc=310, com.zhiliaoapp.musically:SIM spoof:mnc=260"
 arch = "both"
 
 [Reddit]
