--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ enable-magisk-update = false   # set this to false if you do not want to receive
 [Tiktok]
 version = "latest"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
-excluded-patches = "'Playback speed' 'Downloads' 'Sanitize sharing links' 'Feed filter' 'Settings'"
+excluded-patches = "'Playback speed' 'Downloads' 'Sanitize sharing links' 'Feed filter' 'Settings' 'Disable login requirement' 'Fix Google login'"
 include-patches = "'SIM Spoof'"
 patch-args = "com.zhiliaoapp.musically:SIM spoof:mcc=310, com.zhiliaoapp.musically:SIM spoof:mnc=260"
 arch = "both"
