--- a/config.toml
+++ b/config.toml
@@ -6,11 +6,11 @@ enable-magisk-update = false   # set this to false if you do not want to receive
 # you can use rvmm-config-gen to generate a config
 
 [Tiktok]
-version = "latest"
+version = "37.0.4"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 excluded-patches = "'Playback speed' 'Downloads' 'Sanitize sharing links' 'Feed filter' 'Settings' 'Disable login requirement' 'Fix Google login' 'Show seekbar' 'Remember clear display'"
-included-patches = "'SIM spoof'"
-patch-args = "com.zhiliaoapp.musically:SIM spoof:mcc=310, com.zhiliaoapp.musically:SIM spoof:mnc=260"
+included-patches = "'Spoof SIM provider'"
+patcher-args = "-OdarkThemeBackgroundColor=#FF0F0F0F -Oanother-option=value"
 arch = "both"
 
 [Reddit]
